# eml4842_gps_nav

./: .gitignore  LICENSE  README.md
gps_nav/: package.xml  setup.cfg  setup.py
gps_nav/data/: pose_list.txt
gps_nav/data/stockpile/: depot_path_UTM.txt  my_bandshell_pose_list.txt  path_list_A.txt
gps_nav/gps_nav/: convert_to_UTM.py  goal_pose_creator.py  goal_pose_visualizer.py  motion_spec_provider.py  my_out_for_now.txt  process_pose_list.py  route_pose_provider.py  route_pose_visualizer.py  uf_nav_support.py  uf_support.py  vehicle_controller.py  vehicle_simulator.py
gps_nav/gps_nav/uf_support/: geometry_support.py  route_support.py
gps_nav/launch/: l1.py  launch_gps_0.py  simulation_demo.launch.py  vehicle.launch.py  visualization.launch.py
gps_nav/my_data/output/: route_segments.txt  veh_sim_data.txt
gps_nav/my_data/stockpile/: BB_to_MAEB.txt  bandshell_1.txt  depot_path.txt  path_list_B.txt  path_list_orig.txt  tyn.txt  tyndall2_path_list.txt  tyndall3_path_list.txt
gps_nav/rviz/: bandshell_1.rviz  depot_park_rviz_launch.rviz  gps_nav.rviz
gps_nav/scripts/: convert_to_UTM.py  kml_to_route.py  process_pose_list.py
gps_nav_interfaces/: CMakeLists.txt  package.xml
gps_nav_interfaces/msg/: CurrentGoalPose.msg  LookAheadSpecs.msg
gps_nav_interfaces/srv/: GetRoutePoses.srv
